frontend/src/css/theme.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root {
    --background: #020416;
    --text-color: rgb(233, 233, 233);

    --primary: #200054;
    --primary-hover: #330086;

    --secondary: #382d4a;
    --secondary-hover: #4c415e;

    --danger: #ff2213;
    --danger-hover: #eb4034;

    --error: red;

    --default-box-shadow: 4px 4px 4px 2px rgba(30, 30, 30, 0.8);

    --dark: #222;

    /* widget */
    --widget-background: #141821;

    /* table */
    --table-header-footer-background: var(--primary);
    --table-background: var(--widget-background);
    --table-scrollbar-background: var(--table-background);
    --table-scrollbar-thumb: #222;
    --table-scrollbar-thumb-hover: #444;
    --table-tablerow-background: #333;

    /* modal */
    --modal-background: #111;

    /* input */
    --input-background: #222;
}

html, body, #root {
    width: 100vw !important;
    height: 100vh !important;
}

html {
    background: var(--background);
}

body {
    font-family: 'Montserrat', sans-serif !important;
    color: var(--text-color);

    background: var(--background);
}

#root {
    padding-top: 80px;
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

/* -LINKS---------------------- */

a, a:hover, a:visited {
    color: var(--text-color);
}

.register-login-link {
    position: absolute;
    left: 25px;
}

/* -BUTTON-&-INPUT------------- */

.custom-button, input {
    color: var(--text-color);

    border: none;
    border-radius: 5px;

    padding: 10px;
}

/* -BUTTON--------------------- */

.custom-button {
    font-weight: 500;
}

.custom-button, .custom-button:active, .custom-button:focus, .custom-button:active:focus {
    background-color: var(--secondary);
}

.custom-button:hover {
    background-color: var(--secondary-hover);
}

.custom-button:hover, .custom-button:active, .custom-button:focus, .custom-button:active:focus {
    border-color: none;
    box-shadow: none;
}

.custom-button.primary,
.custom-button.primary:active,
.custom-button.primary:focus,
.custom-button.primary:active:focus {
    background: var(--primary);
}

.custom-button.primary:hover {
    background: var(--primary-hover);
}

.custom-button.primary:hover, .custom-button.primary:active, .custom-button.primary:focus, .custom-button.primary:active:focus {
    border-color: none;
    box-shadow: none;
}

.custom-button-no-hover:hover {
    background-color: var(--dark);
}

.custom-button.danger-button {
    background-color: var(--danger);
}

.custom-button.danger-button:hover {
    background-color: var(--danger-hover);
}

.icon-button {
    color: var(--text-color);
    background-color: transparent;
    border: none;
    padding: 0;
}

/* -INPUT---------------------- */

input:focus-visible {
    outline: none;
    border-color: var(--primary);
}

/* -MUI INPUT------------------ */

.MuiTextField-root {
    background-color: var(--input-background);
    border-radius: 10px;
}

.MuiTextField-root input, .MuiTextField-root textarea, .MuiTextField-root > label, .MuiTextField-root > div, .MuiInputAdornment-root > p {
    font-family: 'Montserrat', sans-serif !important;
    color: var(--text-color);
}

.MuiTextField-root svg.MuiSvgIcon-root {
    -webkit-filter: invert(100%); /* Safari/Chrome */
    filter: invert(100%);
}

div.Mui-focused {
    border-radius: 10px;
}

div.Mui-focused > fieldset {
    border-color: var(--text-color) !important;
}

label.Mui-focused {
    color: var(--text-color) !important;
}

.number-input input {
    text-align: right;
}

/* -MUI AUTOCOMPLETE----------- */

.MuiAutocomplete-listbox {
    background: var(--dark);
    color: var(--text-color);
    padding: 0 !important;
}

.MuiAutocomplete-option {
    border-bottom: 1px solid rgb(71, 71, 71);
}

.MuiAutocomplete-option:last-child {
    border-bottom: none;
}

.MuiAutocomplete-option[aria-selected="true"] {
    background-color: var(--primary) !important;
}

.MuiAutocomplete-option.Mui-focused {
    background-color: var(--primary-hover) !important;
}

/* -CHIP----------------------- */

.MuiChip-root {
    background-color: var(--primary) !important;
}

.MuiChip-root > span {
    color: var(--text-color);
}

.MuiChip-root > svg {
    filter: none !important;
    color: var(--dark) !important;
}

/* -MENUBAR-------------------- */

.navbar {
    background: var(--primary) !important;
}

.navbar button {
    margin-right: 15px;
}

.navbar .navbar-brand,
.navbar .nav-link {
    color: var(--text-color) !important;
}

.navbar .navbar-brand {
    font-weight: 700;
    letter-spacing: -0.02em;
    font-size: 1.3rem;
    margin-left: 15px;
}

.logout-button {
    margin-left: auto;
}

.navbar .nav-link {
    font-size: 1.2rem;
    display: flex;
    align-items: center;
}

.navbar .nav-link > svg {
    margin-right: 7px;
}

.navbar-toggler {
    border: none;
    filter: invert(1);
}

.navbar-toggler:focus {
    box-shadow: none;
    filter: invert(0.8);
}

/* -TABLE---------------------- */

.table-wrapper {
                  /* menubar          footer */
    height: calc(95vh - 80px - 34px - 20px);
    overflow: auto;
    background: var(--table-background);
    border-radius: 10px;
    position: relative;
}

@media only screen and (max-width: 767px) {
    .table-wrapper {
        height: calc(95vh - 80px - 34px - 40px);
    }
}

.table-wrapper::-webkit-scrollbar {
    width: 10px;
    background: linear-gradient(180deg, var(--table-header-footer-background) 50px, var(--table-scrollbar-background) 50px, var(--table-scrollbar-background) calc(100% - 2rem), var(--table-header-footer-background) calc(100% - 2rem));
    border-radius: 0 10px 10px 0;
}

.table-wrapper::-webkit-scrollbar-track {
    margin-top: 50px;
    margin-bottom: 2rem;
}

.table-wrapper::-webkit-scrollbar-thumb {
    background: var(--table-scrollbar-thumb);
}

.table-wrapper::-webkit-scrollbar-thumb:hover {
    background: var(--table-scrollbar-thumb-hover);
}

.custom-table {
   border-collapse: collapse;
   width: 100%;
}

.custom-table th,
.custom-table td {
    padding: 7px 14px;
    font-size: 1.25rem;
}

.custom-table th {
    background: var(--table-header-footer-background);
    height: 50px;
    position: sticky;
    top: 0;
}

.custom-table th > div {
    display: flex;
}

.custom-table th > div > .MuiTextField-root {
    width: 100%;
}

.custom-table th > div .Mui-focused > fieldset,
.custom-table th > div > .MuiTextField-root > .MuiOutlinedInput-root:hover > fieldset {
    border: none;
}

.custom-table th > div > .MuiTextField-root input {
    background: #333;
    padding: 8px;
    height: 1rem;
}

.custom-table th:last-child {
    width: 1px;
}

.custom-table th:last-child > div {
    justify-content: center;
}

.custom-table td:last-child {
    display: flex;
}

.custom-table tbody tr {
    border-bottom: 1px solid var(--table-tablerow-background);
}

.custom-table tbody tr:last-child {
    border-bottom: none;
}

.custom-table td:first-child {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 0;
    min-width: 250px;
}

.custom-table-footer {
    position: sticky;
    bottom: -1px; /* -1px because otherwise you would be */
                  /* able to the table body scroll past  */
    left: 0;
    right: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 2rem;
    background: var(--table-header-footer-background);
    font-style: italic;
}

/* -DIALOG--------------------- */

.modal-header {
    background: var(--primary);
    border-radius: 10px 10px 0 0;
}

.modal-content {
    background: var(--modal-background);
    border-radius: 10px;
}

.modal-footer, .modal-header {
    border: none;
}

.modal-body > input {
    width: 100%;
}

.modal-header .btn-close {
    filter: invert(1);
}

/* -SPINNER-------------------- */

.spinner-border {
    color: var(--primary) !important;
}

.spinner-page {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

/* ---------------------------- */

h1, h2, h3, h4, h5, h6 {
    font-weight: bold;
}

.overlay, .dark-bg {
    background-color: rgba(var(--bs-dark-rgb), 0.6);
}

.content {
    margin-left: auto;
    margin-right: auto;

    width: 95vw;
}

.widget {
    margin-bottom: 25px;
}

.widget > .container,
.widget > .container-fluid {
    background: var(--widget-background);
    padding: 10px 25px 10px 25px;
    border-radius: 10px;
}

.overlay {
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 20px;
    padding-right: 20px;

    border-radius: 0.3rem;

    margin-bottom: 20px;
}

.table-overlay {
    padding-left: 15px;
    padding-right: 15px;
}

.footer {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
}

.space-between, .right, .center {
    display: flex;
}

.space-between {
    justify-content: space-between;
}

.right {
    justify-content: right;
}

.center {
    justify-content: center;
}

.ml-2 {
    margin-left: 0.5rem !important;
}

.mr-2 {
    margin-right: 0.5rem !important;
}

.bold {
    font-weight: bold;
}

.italic {
    font-style: italic;
}

.half-width {
    width: 50%;
}

.third-width {
    width: 33%;
}

.ellipsis {
    text-overflow: ellipsis;
    overflow: hidden;
}

.dialog-row {
    display: flex;
    justify-content: space-between;

    margin: 10px;
}

.dialog-row > * {
    padding: 0;
}

.error {
    color: var(--error);
}

.loading-container {
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.loading-container > span {
    color: var(--primary-hover);
}

